2000-02-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99g

	* ntpd/ntpd.c: Only log EINTR if debug > 2.

2000-02-25  Harlan Stenn  <stenn@whimsy.udel.edu>

	* scripts/mkver.in (ConfStr): Use `-r' when configured with crypto.

	* ntpd/refclock_wwvb.c (wwvb_receive): Undo the previous chagne.

2000-02-24  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_wwvb.c (wwvb_receive): LENWWVB0 can return 6 or 7
	fields.
	From: Michael Sinatra <msinatra@uclink4.berkeley.edu>
	with a cleanup from Ulrich.

	* scripts/mkver.in (ConfStr): Make RSAREF appear as part of the
	version.

2000-02-21  Sven Dietrich <sven_dietrich@trimble.com>

	* ports/winnt/include/config.h: Enable MD5 and RANDOM by default
	* ports/winnt/libntp/SetSystemTime.c: Fix warning and const declaration
	From: Carl Byington <carl@five-ten-sg.com>

2000-02-21  Harlan Stenn  <stenn@whimsy.udel.edu>

	* Makefile.am (SUBDIRS): Make librsaref right after includes so we
	can copy any needed header files over.

	* libntp/Makefile.am (INCLUDES): Also look in librsaref for des.h
	* ntpd/Makefile.am (INCLUDES): Ditto
	* util/Makefile.am (INCLUDES): Ditto

	* librsaref/Makefile.am (librsaref_a_SOURCES): Use the des.h from
	the rsaref2 distribution.

	* include/Makefile.am (noinst_HEADERS): No, we don't want des.h

2000-02-20  Harlan Stenn  <stenn@whimsy.udel.edu>

	* include/Makefile.am (noinst_HEADERS): Add des.h

2000-02-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_config.c (do_resolve_internal): Try Real Hard to
	generate a full random key.
	From: Carl Byington <carl@five-ten-sg.com>

	* include/ntp.h: Now we know we have either mrand48() or random().
	* configure.in: If we have mrand48, use it.  Otherwise, use (and
	provide if necessary) random().
	* libntp/Makefile.am (EXTRA_DIST): random.c
	* libntp/random.c: Added.

2000-02-18  Harlan Stenn  <stenn@whimsy.udel.edu>

	* librsaref/Makefile.am (stamp-rsaref): Typo

	* configure.in (ac_cv_func_ctty_for_f_setown): Yes for OpenBSD